# My_commercial_project_1

./: pyproject.toml
data/: comedy.json  config.py
src/: main.py  utils.py  views.py
